--- a/app/src/main/res/layout-large/fiche_serie_activity.xml
+++ b/app/src/main/res/layout-large/fiche_serie_activity.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -164,7 +171,18 @@
                         android:scrollbars="none" />
                 </FrameLayout>
 
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/bcgrd"
+                    android:paddingLeft="16dp">
 
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/series_liees"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scrollbars="none" />
+                </FrameLayout>
 
 
 
@@ -181,3 +199,12 @@
 
 
 
+<android.support.design.widget.NavigationView
+android:id="@+id/nav_view"
+android:layout_width="wrap_content"
+android:layout_height="match_parent"
+android:layout_gravity="start"
+android:fitsSystemWindows="true"
+app:headerLayout="@layout/nav_header_main"
+app:menu="@menu/activity_main_drawer" />
+    </android.support.v4.widget.DrawerLayout>
