--- a/app/src/main/res/layout/salle_card.xml
+++ b/app/src/main/res/layout/salle_card.xml
@@ -1,82 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
 
     <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/salle_card"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="340dp"
+        android:layout_height="400dp"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
+        android:layout_margin="8dp"
         android:elevation="3dp"
-        app:cardCornerRadius="0dp"
-        >
-        <RelativeLayout
+        app:cardCornerRadius="0dp">
+
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/nom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorAccent"
+                android:background="@color/colorPrimary"
                 android:fontFamily="casual"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
-                android:textAlignment="center"
+                android:textAlignment="viewStart"
+                android:paddingStart="8dp"
+                android:text="gggggg"
                 android:textColor="#FFF"
-                android:textSize="15dp" />
+                android:textSize="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/thumbnail"
-                android:layout_width="236dp"
-                android:layout_height="200dp"
-                android:layout_alignParentStart="false"
-                android:layout_alignParentTop="false"
-                android:layout_below="@id/nom"
+                android:layout_width="497dp"
+                android:layout_height="209dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:clickable="true"
                 android:scaleType="fitXY"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.506"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nom"
                 app:srcCompat="@drawable/cinemaatlas" />
+
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="12dp"
+                android:tint="@color/colorAccent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/thumbnail"
+                app:srcCompat="@drawable/ic_location_on_white_24dp" />
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:tint="@color/colorAccent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView2"
+                app:layout_constraintVertical_bias="0.876"
+                app:srcCompat="@drawable/ic_phone_white_24dp" />
 
             <TextView
                 android:id="@+id/adresse"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_below="@id/nom"
+                android:layout_width="232dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="0dp"
-                android:layout_toRightOf="@+id/thumbnail"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:drawablePadding="2dp"
                 android:fontFamily="casual"
-                android:padding="10dp"
+                android:padding="8dp"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:text="adresse"
                 android:textAlignment="textStart"
                 android:textColor="@color/colorPrimary"
-                android:textSize="12dp" />
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageView2"
+                app:layout_constraintTop_toBottomOf="@+id/thumbnail" />
 
             <TextView
                 android:id="@+id/tel"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_below="@id/adresse"
+                android:layout_width="193dp"
+                android:layout_height="36dp"
                 android:layout_margin="0dp"
-                android:layout_toRightOf="@id/thumbnail"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:fontFamily="casual"
-                android:padding="10dp"
+                android:padding="8dp"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:text="94938493"
                 android:textAlignment="textStart"
                 android:textColor="@color/colorPrimary"
-                android:textSize="9dp" />
-        </RelativeLayout>
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.313"
+                app:layout_constraintStart_toEndOf="@+id/imageView3"
+                app:layout_constraintTop_toBottomOf="@+id/adresse"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <ImageButton
+                android:id="@+id/pos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@color/colorPrimary"
+                app:layout_constraintEnd_toEndOf="@+id/nom"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_gps_fixed_white_24dp"
+               />
+
+        </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
-</LinearLayout>
