--- a/app/src/main/res/values/salles_list.xml
+++ b/app/src/main/res/values/salles_list.xml
@@ -5,17 +5,23 @@
         <item>27, Rue mohamad seguir saadouni, Bab el oued, 16000, Alger, Algérie</item>
         <item>+213 23 96 11 47</item>
         <item>@drawable/cinemaatlas</item>
+        <item>36.79</item>
+        <item>3.059</item>
     </string-array>
     <string-array name="salle_2">
         <item>La salle de cinéma cosmos</item>
         <item>Centre commercial riadh el fath, el madania, 16000, Alger, Algérie</item>
         <item>+213 21 68 34 19</item>
         <item>@drawable/cinemacosmos</item>
+        <item>36.74</item>
+        <item>3.057</item>
     </string-array>
     <string-array name="salle_3">
         <item>La salle de cinéma inb khaldoun</item>
         <item>Rue doctor cherif saadane, Alger-centre, 16000, Alger, Algérie</item>
         <item>+213 23 40 30 22</item>
         <item>@drawable/cinemaibnkhaldoun</item>
+        <item>36.77</item>
+        <item>3.05</item>
     </string-array>
 </resources>
