--- a/app/src/main/res/layout/list_single_card.xml
+++ b/app/src/main/res/layout/list_single_card.xml
@@ -21,6 +21,12 @@
             android:layout_height="120dp"
             android:background="@drawable/img2">
 
+            <ImageView
+                android:id="@+id/posterr"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/commedesbetes" />
+
             <android.support.constraint.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="132dp">
