--- a/app/src/main/res/layout/fiche_personne_activity.xml
+++ b/app/src/main/res/layout/fiche_personne_activity.xml
@@ -146,6 +146,75 @@
                     android:layout_height="10dp" />
 
 
+                <FrameLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:background="@color/bcgrd">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:orientation="vertical">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:background="@color/comment"
+                            android:layout_marginBottom="4dp"/>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="left"
+                            android:orientation="horizontal">
+                            <TextView
+                                android:id="@+id/nb_comments"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentStart="true"
+                                android:layout_centerVertical="true"
+                                android:layout_gravity="center_vertical"
+                                android:text="Commentaires"
+                                android:layout_marginStart="8dp"
+                                android:textColor="@color/section_color"
+                                android:textSize="15sp" />
+                            <android.support.v4.widget.Space
+                                android:layout_width="180dp"
+                                android:layout_height="match_parent" />
+                            <ImageButton
+                                android:id="@+id/more"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@null"
+                                app:srcCompat="@drawable/ic_expand_more_black_24dp" />
+
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:background="@color/comment"
+                            android:layout_marginTop="4dp"/>
+                    </LinearLayout>
+
+
+
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/commentaire"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/bcgrd">
+
+                    <include layout="@layout/content_comment" />
+
+                </FrameLayout>
+
+
 
 
 
