--- a/app/src/main/res/layout/view_pager_item.xml
+++ b/app/src/main/res/layout/view_pager_item.xml
@@ -21,34 +21,12 @@
 
             <ImageView
                 android:id="@+id/filmPoster"
-                android:layout_width="270dp"
-                android:layout_height="218dp"
-                android:layout_marginTop="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
                 app:srcCompat="@drawable/img2" />
 
-            <LinearLayout
 
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="#FFF"
-                >
-                <android.support.v4.widget.Space
-                    android:layout_width="120dp"
-                    android:layout_height="0dp" />
-
-
-                <ImageButton
-                    android:id="@+id/imageButton"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_weight="2"
-                    android:background="#FFF"
-                    android:gravity="end"
-                    android:paddingBottom="5dp"
-                    app:srcCompat="@drawable/heart" />
-
-            </LinearLayout>
         </LinearLayout>
     </FrameLayout>
 
